big changes exe added half way to full app reserved